services/restaurant/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: goodfood-delivery
spec:
  selector:
    app: goodfood-delivery
  ports:
    - name: "grpc"
      port: 50005
      targetPort: 50005
status:
  loadBalancer: {}
